<resources>
    <string name="facebook_app_id">744833395659337</string>
    <string name="app_name">Tesis</string>
    <string name="login_title">Login</string>
    <string name="main_title">Menu</string>
    <string name="my_account_title">My Account</string>
    <string name="my_contributions_title">My Contributions</string>
    <string name="camera_title">Augmented Reality</string>
    <string name="point_title">Point</string>
    <string name="testimony_title">Add New Historical Event</string>
    <string name="historical_event_title">Historical Event</string>
    <string name="register_title">Register Account</string>
    <string name="recover_pass_title">Recover Password</string>
    <string name="tc_title">Terms and Conditions</string>
    <string name="pp_title">Privacy Policies</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="button_save">Save Changes</string>
    <string name="current_position">Current position</string>
    <string name="button_login">Log In</string>
    <string name="button_register">Register</string>
    <string name="button_recover">Recover Password</string>
    <string name="button_add">Add</string>
    <string name="button_play">Play</string>
    <string name="button_playing">Stop Playing</string>
    <string name="button_my_contributions">Contributions</string>
    <string name="default_user_fullname">Anonimous</string>
    <string name="button_map">Show Map</string>
    <string name="button_camera">Activate Augmented Reality</string>
    <string name="button_camera_small">Activate AR</string>
    <string name="button_my_account">My Account</string>
    <string name="button_logout">Log Out</string>
    <string name="button_add_historical_event">Add Historical Event</string>
    <string name="logout_menu_login">Login</string>
    <string name="logout_menu_register">Register</string>
    <string name="logout_menu_recover_password">Recover Password</string>
    <string name="logout_menu_terms">Terms And Conditions</string>
    <string name="logout_menu_privacy">Privacy Politics</string>
    <string name="label_title">Title</string>
    <string name="label_description">Descripción</string>
    <string name="label_user_fullname">Fullname</string>
    <string name="label_email">E-mail</string>
    <string name="label_repeat_email">Repeat E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_repeat_password">Repeat Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_repeat_new_password">Repeat New Password</string>
    <string name="label_post_as_anonymous">Post as anonymous</string>
    <string name="tc_p0">A continuación se describen los términos y condiciones, los cuales regularán el acceso y uso de la aplicación móvil.</string>
    <string name="tc_h1">Normas generales de uso de la aplicación móvil</string>
    <string name="tc_p1">El usuario está obligado a usar la aplicación móvil de forma responsable y correcta, con un fin netamente educativo. Así mismo, estará en la capacidad de hacerse responsable por las posibles consecuencias que conlleve cualquier aporte que realice mediante la aplicación.
Finalmente, el usuario tendrá la posibilidad de darse de baja de la aplicación móvil en cualquier momento, así como reactivar su usuario en caso crea conveniente.
</string>
    <string name="tc_h2">Prohibiciones en el uso de la aplicación móvil</string>
    <string name="tc_p2">Queda prohibido que se use la aplicación móvil para lo siguiente:</string>
    <string name="tc_h3">Interrupción del servicio</string>
    <string name="tc_p3">El sistema que da soporte a la aplicación móvil puede, eventualmente, no estar disponible debido a mantenimiento o imprevistos técnicos. En tales casos se tratará de restablecer el funcionamiento normal lo más pronto posible, sin que por ello pueda imputársele algún tipo de responsabilidad a los titulares de la aplicación móvil.</string>
    <string name="tc_h4">Responsabilidades del uso de la aplicación móvil</string>
    <string name="tc_p4">Los titulares de la aplicación móvil no se harán responsables de cualquier daño o pérdida que puedan sufrir los usuarios mientras hagan uso de ésta. En ese sentido, los usuarios se harán responsables de la decisión de usar la aplicación móvil en el lugar que se encuentren, y de las consecuencias que traiga ello.</string>
    <string name="tc_h5">Relación entre partes</string>
    <string name="tc_p5">El hecho de que el usuario de la aplicación acepte los términos y condiciones de uso planteados en esta sección o realice algún aporte al contenido mostrado, no establece ninguna relación laboral o asociación entre el titular de la aplicación móvil y el usuario. Así mismo, los titulares de la aplicación móvil no lucrarán con el contenido aportado por los usuarios.</string>
    <string name="tc_h6">Sanciones de incumplimiento</string>
    <string name="tc_p6">Los titulares de la aplicación móvil se reservan el derecho de inhabilitar indefinidamente a los usuarios que incumplan los términos y condiciones establecidos. En el caso de alguna queja sobre la decisión de inhabilitación tomada, ésta será resuelta entre el usuario y titular de la aplicación por medios escritos o presenciales según sea el caso.</string>
    <string name="tc_h7">Modificación de los términos y condiciones</string>
    <string name="tc_p7">Los titulares de la aplicación móvil se reservan el derecho de cambiar en cualquier momento los términos y condiciones de uso, sin estar sujeto a realizar campañas informativas. Es por ello que es responsabilidad del usuario la revisión periódica de esta sección.</string>
    <string name="pp_p0">En esta sección se describirá cómo se utilizará la información personal y los aportes de contenido de los usuarios de la aplicación móvil.</string>
    <string name="pp_dp_h0">Sobre la protección de datos personales</string>
    <string name="pp_h1">Datos personales</string>
    <string name="pp_p1">El uso de la aplicación móvil obliga a los usuarios a proporcionarnos información personal, la cual se realiza con el consentimiento de éstos, para ser procesados conforme a la Ley N° 29733, Ley de protección de datos personales.
Los datos que serán recopilados, almacenados y procesados son los siguientes:</string>
<string name="pp_p1_1">- Nombre completo.</string>
<string name="pp_p1_2">- Correo electrónico.</string>
<string name="pp_p1_3">- Ubicación geográfica, expresada en latitud y longitud.</string>
    <string name="pp_h2">Principio de legalidad</string>
    <string name="pp_p2">Los titulares de la aplicación móvil no recopilarán los datos personales de los usuarios mediante medios fraudulentos o sin su consentimiento. Así mismo, no recopilarán otros tipos de datos que no se hayan especificado explícitamente en esta sección o, que no sean de conocimiento de los usuarios.</string>
    <string name="pp_h3">Principio de finalidad</string>
    <string name="pp_p3">El uso que se le dará a los datos personales de los usuarios de la aplicación móvil tendrá los siguientes fines:</string>
<string name="pp_p3_1">- Hacer identificable al usuario y a las acciones que éste realice.</string>
<string name="pp_p3_2">- Poder referenciar los aportes a los usuarios que los realizaron.</string>
<string name="pp_p3_3">- Mostrar contenido relevante al usuario considerando su ubicación real.</string>
<string name="pp_p3_4">- De darse el caso, recurrir a las sanciones establecidas en los términos y condiciones.</string>
<string name="pp_p3_5">- Los datos personales no pasarán, bajo ningún motivo, a ser posesión de terceros. De esta forma aseguramos que el único uso que se les dé sean los especificados en esta sección.</string>
    <string name="pp_h4">Principio de seguridad</string>
    <string name="pp_p4">Toda transferencia de datos que realice la aplicación móvil estará encriptada, lo cual garantiza la seguridad de la información de los usuarios y que éstos no puedan ser utilizados de forma maliciosa por terceros.</string>
    <string name="pp_h5">Derechos del titular de los datos personales</string>
    <string name="pp_p5">Los titulares de los datos personales (usuarios de la aplicación móvil) tienen los siguientes derechos:</string>
<string name="pp_p5_1">- A obtener acceso a sus datos personales.</string>
<string name="pp_p5_2">- A la actualización, inclusión y rectificación de sus datos personales, en caso crean conveniente.</string>
<string name="pp_p5_3">- A darse de baja, con el fin de que se dejen de usar sus datos personales.</string>
    <string name="pp_da_h0">Sobre los derechos de autor</string>
    <string name="pp_h6">Glosario</string>
    <string name="pp_p6_1">- Obra: toda creación intelectual personal y original, susceptible de ser divulgada o reproducida en cualquier forma, conocida o por conocerse.</string>
    <string name="pp_p6_2">- Autor: toda persona natural que realiza la creación intelectual.</string>
    <string name="pp_h7">Disposiciones generales</string>
    <string name="pp_p7">Si bien los usuarios de la aplicación móvil pueden aportar contenido que no se encuentre presente en la aplicación pero que es de conocimiento público, puede darse el caso de que éstos realicen el aporte de una obra inédita. En este último caso, tanto los usuarios como los titulares de la aplicación móvil, deberán regirse bajo el decreto legislativo No. 822, Ley sobre el derecho de autor. En ese sentido, a los autores se les reconocerán los derechos que se detallan en las secciones siguientes.</string>
    <string name="pp_h8">Derecho de paternidad</string>
    <string name="pp_p8">El autor de la obra tiene el derecho de ser reconocido como tal, es por ello que la aplicación móvil hará público el nombre de los usuarios que hayan aportado con un contenido de dicho tipo. Así mismo, de conformidad con la Ley de protección de datos personales, los usuarios tendrán la posibilidad de realizar aportes de forma anónima.
Finalmente, de darse el caso en que la cuenta del autor se inhabilite, sus obras serán tratadas como anónimas hasta la reactivación de su cuenta.
</string>
    <string name="pp_h9">Derecho de modificación</string>
    <string name="pp_p9">Si bien todo aporte pasará por una revisión previa a su publicación, los autores tendrán la capacidad de solicitar la modificación de sus obras. Pero, éstos tendrán que adecuarse al tiempo de espera, en caso exista alguno.</string>
    <string name="pp_h10">Derecho de retiro de la obra</string>
    <string name="pp_p10">En caso lo crea conveniente, el autor tiene derecho de dar de baja su obra. Pero, éstos tendrán que adecuarse al tiempo de espera, en caso exista alguno.</string>
    <string name="pp_h11">Derecho de acceso</string>
    <string name="pp_p11">El autor tiene derecho de acceder a sus obras con el fin de ejercer los derechos antes establecidos. Es por ello que la aplicación móvil permitirá listar todas las obras, y contenido en general, que haya aportado el usuario.</string>
    <string name="pp_h12">Obligaciones de los usuarios</string>
    <string name="pp_p12">Todo usuario de la aplicación móvil que desee aportar una obra, deberá hacerlo solo si ésta fue creada por sí mismo o por terceros, previa autorización. Así mismo, éstos tienen la obligación de hacerse cargo de toda responsabilidad que trae consigo ser autor de dicha obra.</string>
    <string name="pp_h13">Responsabilidades de los usuarios</string>
    <string name="pp_p13">La aplicación móvil funcionará como medio para hacer pública las obras que los autores crean convenientes. Ningún usuario está obligado a realizar ningún aporte, éstos se realizarán de forma voluntaria. Es por lo antes mencionado, que de producirse una infracción sobre la Ley de derecho de autor u otra norma aplicable, el usuario que la ocasionó se hará responsable sin involucrar a los titulares de la aplicación móvil.</string>
</resources>