<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/term_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14pt"
                android:layout_marginBottom="10dp"
                android:text="@string/tc_title"/>

            <TextView
                android:id="@+id/tc_p0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tc_p0"/>

            <TextView
                android:id="@+id/tc_h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="8pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tc_h1"/>

            <TextView
                android:id="@+id/tc_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tc_p1"/>

            <TextView
                android:id="@+id/tc_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="8pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tc_h2"/>

            <TextView
                android:id="@+id/tc_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tc_p2"/>

            <TextView
                android:id="@+id/tc_h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="8pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tc_h3"/>

            <TextView
                android:id="@+id/tc_p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tc_p3"/>

            <TextView
                android:id="@+id/tc_h4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="8pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tc_h4"/>

            <TextView
                android:id="@+id/tc_p4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tc_p4"/>

            <TextView
                android:id="@+id/tc_h5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="8pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tc_h5"/>

            <TextView
                android:id="@+id/tc_p5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tc_p5"/>

            <TextView
                android:id="@+id/tc_h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="8pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tc_h6"/>

            <TextView
                android:id="@+id/tc_p6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tc_p6"/>

            <TextView
                android:id="@+id/tc_h7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="8pt"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tc_h7"/>

            <TextView
                android:id="@+id/tc_p7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tc_p7"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>