<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/email_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_lbl"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/email_error_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_txt"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@android:color/holo_red_light"/>

    <TextView
        android:id="@+id/repeat_email_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_error_lbl"
        android:text="@string/label_repeat_email"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/repeat_email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repeat_email_lbl"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/repeat_email_error_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repeat_email_txt"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@android:color/holo_red_light"/>

    <Button
        android:id="@+id/recover_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repeat_email_error_lbl"
        android:text="@string/button_recover"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

</RelativeLayout>